# dynaprot

./: .gitattributes  .gitignore  README.md  pyproject.toml  train.py
DynaProt/data/: datasets.py  transforms.py
DynaProt/model/: DynaProt.py
configs/data/: atlas_config.yaml  atlas_config_flexpertsplits.yaml  atlas_config_randomcropping.yaml  atlas_config_randomcropping_256res.yaml  atlas_config_sqrt.yaml
configs/model/: dynaprot_joint.yaml  dynaprot_joint_4layers.yaml  dynaprot_joint_pairattention.yaml  dynaprot_joint_pairattention_bigger.yaml  dynaprot_joint_pairattention_biggest.yaml  dynaprot_joint_pairattention_choleskycombiner.yaml  dynaprot_joint_pairattention_gradaccumulation.yaml  dynaprot_joint_stronger.yaml  dynaprot_marginal.yaml  dynaprot_marginal_ablateipa.yaml  dynaprot_marginal_ablatemseloss.yaml  dynaprot_marginal_largerreadout.yaml  dynaprot_marginal_nosinusoidal_1layer.yaml  dynaprot_marginal_nosinusoidal_1layer_ln.yaml  dynaprot_marginal_nosinusoidal_2layer.yaml  dynaprot_marginal_nosinusoidal_2layer_prelayernorm.yaml  dynaprot_marginal_nosinusoidal_2layer_sqrt.yaml  dynaprot_marginal_sinusoidal.yaml  dynaprot_simple.yaml
dynaprot/data/: datasets.py  transforms.py  utils.py
dynaprot/data/preprocessing/: extract_dynamics copy.py  extract_dynamics.py  extract_pdb_chains.py  preprocess_atlas.py  preprocess_atlas_nma.py  (+1 more)
dynaprot/evaluation/: metrics.py  visualizer.py
dynaprot/model/: architecture.py  callbacks.py  loss.py
experiments/: data.ipynb  eval.ipynb  model.ipynb  rebuttal.md  rebuttal_bowen  rebuttal_bowen.md  rebuttal_revised.md
(+15 files in other folders)
